# vpd

./: .gitignore  CMakeLists.txt  README.md  build_for_pi  streams.json
doc/: CMakeLists.txt  faq.txt  installing.txt  news.txt  roadmap.txt  state-diagrams.dia
doc/man/: CMakeLists.txt  vpd.txt
doc/web/: CMakeLists.txt  compiling.txt  faq.txt  index.html  index.txt  installing.txt  news.txt
lib/boost/process/: operations.hpp
src/: CMakeLists.txt  Makefile  client_connection.cpp  client_connection.h  client_engine.cpp  client_engine.h  config.h  config.h.in  main.cpp  play_engine.cpp  play_engine.h  player.cpp  player.h  playlist.cpp  playlist.h  remote_engine.cpp  remote_engine.h  runtime_config.cpp  runtime_config.h
src/test/: CMakeLists.txt  client_connection.cpp
tests/: CMakeLists.txt  asio_setup.h  client_connection.cpp  playlist.cpp  status.cpp
